--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -11,12 +11,15 @@
 	<script src="https://kit.fontawesome.com/5886615ac6.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/ceb1dc6a3c.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/6f0457f699.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/12aeb1777b.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/8f0ba5d521.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/a184a32840.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<header>
 		<nav>
-			<h1>ohmyfood</h1>
+			<img id="logo" src="images/logo/ohmyfood.png " alt="logo">
 		</nav>
 
 
@@ -28,7 +31,7 @@
 			<p>Paris, Belleville</p>
 		</div>
 		<section class="explorer">
-			<h2>Réserver le menus qui vous convient</h2>
+			<h2>Réserver le menus qui <br> vous convient</h2>
 			<p>Découvrez des restaurants d'exeception,
 				séléctionnés par nos soins.</p>
 			<button>Explorer nos restaurants</button>
@@ -58,8 +61,58 @@
 			</div>
 		</section>
 
+		
+		<section class="ranger">
+			<h2>Restaurants</h2>
+			<div class="restaurants">
+
+				<div class="restaurant-images">
+						<h4 class="new">Nouveau</h4>
+					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
+					<h3>La palette du gôut</h3>
+					<p>Ménilmontant</p>
+					<i class="fa-regular fa-heart"></i>
+				</div>
+
+				<div class="restaurant-images">
+					<h4 class="new">Nouveau</h4>
+					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
+					<h3>La note enchantée</h3>
+					<p>Charonne</p>
+					<i class="fa-regular fa-heart"></i>
+
+
+				</div>
+				<div class="restaurant-images">
+					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa">
+					<h3 >A la française</h3>
+					<p>Cité Rouge</p>
+					<i class="fa-regular fa-heart"></i>
+				</div>
+				<div class="restaurant-images">
+					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis">
+					<h3>Le délice des sens</h3>
+					<p>Folie-Méricourt</p>
+					<i class="fa-regular fa-heart"></i>
+				</div>
+			</div>
+		</section>
+
 	</main>
+	<footer class="footer">
+		<h5 class="footerh5">ohmyfood</h5>
+		<p class="footerp">
+			<i class="fa-solid fa-utensils"></i>
+			Proposer un restaurant</p>
+		<p class="footerp">
+			<i class="fa-solid fa-handshake-angle"></i>
+			Devenir partenaire</p>
+		<p class="footerp">Mentions légales</p>
+		<p class="footerp">Contact</p>
+
+	</footer>
 
 </body>
+
 
 </html>
