--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -14,6 +14,7 @@
 	<script src="https://kit.fontawesome.com/12aeb1777b.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/8f0ba5d521.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/a184a32840.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/95358e5da8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -66,33 +67,37 @@
 			<h2>Restaurants</h2>
 			<div class="restaurants">
 
-				<div class="restaurant-images">
+				<div  class="restaurant-images">
 						<h4 class="new">Nouveau</h4>
+						<a href="menu A.html">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
 					<h3>La palette du gôut</h3>
-					<p>Ménilmontant</p>
+					<p>Ménilmontant</p></a>
 					<i class="fa-regular fa-heart"></i>
 				</div>
 
 				<div class="restaurant-images">
 					<h4 class="new">Nouveau</h4>
+					<a href="menu La note enchantée.html">
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
 					<h3>La note enchantée</h3>
-					<p>Charonne</p>
+					<p>Charonne</p></a>
 					<i class="fa-regular fa-heart"></i>
 
 
 				</div>
 				<div class="restaurant-images">
+					<a href="menu A la française.html">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa">
 					<h3 >A la française</h3>
-					<p>Cité Rouge</p>
+					<p>Cité Rouge</p></a>
 					<i class="fa-regular fa-heart"></i>
 				</div>
 				<div class="restaurant-images">
+					<a href="Menu Le délice des sens.html">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis">
 					<h3>Le délice des sens</h3>
-					<p>Folie-Méricourt</p>
+					<p>Folie-Méricourt</p></a>
 					<i class="fa-regular fa-heart"></i>
 				</div>
 			</div>
