--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
 				<div  class="restaurant-images">
 						<h4 class="new">Nouveau</h4>
-						<a href="menu A.html">
+						<a href="menu la palette du gout.html">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
 					<h3>La palette du gôut</h3>
 					<p>Ménilmontant</p></a>
-					<i class="fa-regular fa-heart likeicon"></i>
+					<i class="fas fa-heart likeicon"></i>
 				</div>
 
 				<div class="restaurant-images">
@@ -82,7 +82,7 @@
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
 					<h3>La note enchantée</h3>
 					<p>Charonne</p></a>
-					<i class="fa-regular fa-heart likeicon"></i>
+					<i class="fas fa-heart likeicon"></i>
 
 
 				</div>
@@ -91,14 +91,14 @@
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa">
 					<h3 >A la française</h3>
 					<p>Cité Rouge</p></a>
-					<i class="fa-regular fa-heart likeicon"></i>
+					<i class="fas fa-heart likeicon"></i>
 				</div>
 				<div class="restaurant-images">
 					<a href="Menu Le délice des sens.html">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis">
 					<h3>Le délice des sens</h3>
 					<p>Folie-Méricourt</p></a>
-					<i class="fa-regular fa-heart likeicon"></i>
+					<i class="fas fa-heart likeicon"></i>
 				</div>
 			</div>
 		</section>
