--- a/menu la palette du gout.html
+++ b/menu la palette du gout.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav>
-      <a href="ohmyfood.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
       <img id="logos" src="images/logo/ohmyfood.png " alt="logo" />
     </nav>
   </header>
