animation et code fini manque heart color

--- a/Menu_Le_délice_des_sens.html
+++ b/Menu_Le_délice_des_sens.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>menu La palette du gôut</title>
-  <link rel="stylesheet" href="menu.css
-  ">
+  <title>menu Le délice des sens </title>
+  <link rel="stylesheet" href="menu.css">
   <script src="https://kit.fontawesome.com/d8185d3b7b.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/95358e5da8.js" crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/6f0457f699.js" crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
   <header>
+    
     <nav>
       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
       <img id="logos" src="images/logo/ohmyfood.png " alt="logo" />
@@ -22,19 +22,19 @@
   </header>
   <main>
     <div class="images">
-      <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
+      <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="wennington">
     </div>
     <section>
       <div class="nomrestaurant">
         <div>
-          <h1>La palette du goût <i class="fa-regular fa-heart"></i></h1>
+          <h1>Le délice des sens <i class="fas fa-heart likeicon"></i></h1>
           <h4>Entrées</h4>
 
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Fricassés d'escargot</h3>
-              <p>Au piment d'espelette</p>
+              <h3>Tartare de thon</h3>
+              <p>Assaisonné au yuzu</p>
                </div>
                <div class="prix">25€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -43,8 +43,9 @@
             <section class="menu">
 
               <div class="menuplat">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire</p>
+                <h3>
+                    Bouchée de homard croustillant </h3>
+                <p>Et sa farandole de petits légumes</p>
                  </div>
                  <div class="prix">35€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -53,8 +54,9 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>Oeuf au plat</h3>
-                  <p>Assaisonné à la truffe sur lit de poireaux</p>
+                  <h3>
+                    Velouté de cèpes</h3>
+                  <p>Aux truffes</p>
                    </div>
                    <div class="prix">20€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -68,17 +70,18 @@
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Filet de boeuf au herbes</h3>
-              <p>Accompagné de sa ribanbelle de légumes</p>
+              <h3>Poulet rôti aux herbes de Provence</h3>
+              <p>Et sa crème de truffe</p>
                </div>
-               <div class="prix">45€</div>
+               <div class="prix">40€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
             </section>
             <section class="menu">
 
               <div class="menuplat">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p>A la truffe noire sur sa purée de panais</p>
+                <h3>
+                    Langouste rôtie</h3>
+                <p>Et ses légumes de saison</p>
                  </div>
                  <div class="prix">35€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -87,8 +90,9 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>Filet de turbo</h3>
-                  <p>Aux agrumes</p>
+                  <h3>
+                    Côte de boeuf Angus</h3>
+                  <p>Et sa purée de panais</p>
                    </div>
                    <div class="prix">44€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -100,8 +104,8 @@
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Paris-Brest</h3>
-              <p>Revisité</p>
+              <h3>Farandole de desserts</h3>
+              <p>Du chef</p>
                </div>
                <div class="prix">18€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -109,8 +113,9 @@
             <section class="menu">
 
               <div class="menuplat">
-                <h3>Macaron au chocolat d'exeception</h3>
-                <p>Et a la glace à la vanille de Madagascar</p>
+                <h3>
+                    Crème brulée</h3>
+                <p>Revisitée</p>
                  </div>
                  <div class="prix">22€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -119,8 +124,9 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>Mousse au chocolat</h3>
-                  <p>Au piment d'espelette et à la truffe noire</p>
+                  <h3>
+                    Tiramisu </h3>
+                  <p>À la noisette</p>
                    </div>
                    <div class="prix">23€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -132,17 +138,19 @@
 		<h5 class="footerh5">ohmyfood</h5>
 		<p class="footerp">
 			<i class="fa-solid fa-utensils"></i>
-			Proposer un restaurant</p>
+      Proposer un restaurant</p>
 		<p class="footerp">
 			<i class="fa-solid fa-handshake-angle"></i>
 			Devenir partenaire</p>
 		<p class="footerp">Mentions légales</p>
-		<p class="footerp">Contact</p>
+		<div> <a href="xxxx@gmail.com" >
+			<p class="footerp">Contact</p></a>
+		</div>
 
 	</footer>
+  </div>
     </section>
   </main>
   
 </body>
 
-</html>
