--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
 	<script src="https://kit.fontawesome.com/8f0ba5d521.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/a184a32840.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/95358e5da8.js" crossorigin="anonymous"></script>
+	
+		
 </head>
 
 <body>
+	<div class="loaderpage load">
+		<div class="dot d1"></div>
+		<div class="dot d2"></div>
+		<div class="dot d3"></div>
+	</div>
+	
 	<header>
+		
 		<nav>
 			<img id="logo" src="images/logo/ohmyfood.png " alt="logo">
 		</nav>
-
 
 	</header>
 	<main>
@@ -69,7 +77,7 @@
 
 				<div  class="restaurant-images">
 						<h4 class="new">Nouveau</h4>
-						<a href="menu la palette du gout.html">
+						<a href="menu_la_palette_du_gout.html">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
 					<h3>La palette du gôut</h3>
 					<p>Ménilmontant</p></a>
@@ -78,7 +86,7 @@
 
 				<div class="restaurant-images">
 					<h4 class="new">Nouveau</h4>
-					<a href="menu La note enchantée.html">
+					<a href="menu_La_note_enchantée.html">
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
 					<h3>La note enchantée</h3>
 					<p>Charonne</p></a>
@@ -87,14 +95,14 @@
 
 				</div>
 				<div class="restaurant-images">
-					<a href="menu A la française.html">
+					<a href="menu_A_la_française.html">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa">
 					<h3 >A la française</h3>
 					<p>Cité Rouge</p></a>
 					<i class="fas fa-heart likeicon"></i>
 				</div>
 				<div class="restaurant-images">
-					<a href="Menu Le délice des sens.html">
+					<a href="Menu_Le_délice_des_sens.html">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis">
 					<h3>Le délice des sens</h3>
 					<p>Folie-Méricourt</p></a>
@@ -113,7 +121,9 @@
 			<i class="fa-solid fa-handshake-angle"></i>
 			Devenir partenaire</p>
 		<p class="footerp">Mentions légales</p>
-		<p class="footerp">Contact</p>
+		<div> <a href="xxxx@gmail.com" >
+			<p class="footerp">Contact</p></a>
+		</div>
 
 	</footer>
 
