--- a/menu_la_palette_du_gout.html
+++ b/menu_la_palette_du_gout.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>menu À la française </title>
-  <link rel="stylesheet" href="menu.css">
+  <title>menu La palette du gôut</title>
+  <link rel="stylesheet" href="menu.css
+  ">
   <script src="https://kit.fontawesome.com/d8185d3b7b.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/95358e5da8.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/6f0457f699.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,19 +22,19 @@
   </header>
   <main>
     <div class="images">
-      <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="wennington">
+      <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
     </div>
     <section>
       <div class="nomrestaurant">
         <div>
-          <h1>À la française <i class="fa-regular fa-heart"></i></h1>
+          <h1>La palette du goût <i class="fas fa-heart likeicon"></i></h1>
           <h4>Entrées</h4>
 
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Tartare de poulpe acidulé</h3>
-              <p>Aux zestes d'orange</p>
+              <h3>Fricassés d'escargot</h3>
+              <p>Au piment d'espelette</p>
                </div>
                <div class="prix">25€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -41,9 +43,8 @@
             <section class="menu">
 
               <div class="menuplat">
-                <h3>
-                    Velouté de légumes d'antan </h3>
-                <p>Carotte, panais, topinambour</p>
+                <h3>Foie gras de canard mi-cuit</h3>
+                <p>Et ses copeaux de truffe noire</p>
                  </div>
                  <div class="prix">35€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -52,9 +53,8 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>
-                    Soupe à l'oignon</h3>
-                  <p>Revisitée</p>
+                  <h3>Oeuf au plat</h3>
+                  <p>Assaisonné à la truffe sur lit de poireaux</p>
                    </div>
                    <div class="prix">20€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -68,18 +68,17 @@
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Coquilles Saint-Jacques</h3>
-              <p>Accompagnées d'une purée de panais</p>
+              <h3>Filet de boeuf au herbes</h3>
+              <p>Accompagné de sa ribanbelle de légumes</p>
                </div>
-               <div class="prix">40€</div>
+               <div class="prix">45€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
             </section>
             <section class="menu">
 
               <div class="menuplat">
-                <h3>
-                    Magret de canard</h3>
-                <p>Et parmentier de pommes de terre</p>
+                <h3>Parmentier de queue de boeuf</h3>
+                <p>A la truffe noire sur sa purée de panais</p>
                  </div>
                  <div class="prix">35€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -88,9 +87,8 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>
-                    Pigeonneau d’Ille-et-Vilaine</h3>
-                  <p>Sur son lit de gnocchis aux légumes</p>
+                  <h3>Filet de turbo</h3>
+                  <p>Aux agrumes</p>
                    </div>
                    <div class="prix">44€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -102,8 +100,8 @@
           <section class="menu">
 
             <div class="menuplat">
-              <h3>Pétales de violettes glacés</h3>
-              <p>Et purée de noisettes</p>
+              <h3>Paris-Brest</h3>
+              <p>Revisité</p>
                </div>
                <div class="prix">18€</div>
                <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -111,9 +109,8 @@
             <section class="menu">
 
               <div class="menuplat">
-                <h3>
-                    Fondant au chocolat</h3>
-                <p>Revisitée</p>
+                <h3>Macaron au chocolat d'exeception</h3>
+                <p>Et a la glace à la vanille de Madagascar</p>
                  </div>
                  <div class="prix">22€</div>
                  <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -122,9 +119,8 @@
               <section class="menu">
 
                 <div class="menuplat">
-                  <h3>
-                    Millefeuille croustillant</h3>
-                  <p>Myrtilles et pâte d’amande</p>
+                  <h3>Mousse au chocolat</h3>
+                  <p>Au piment d'espelette et à la truffe noire</p>
                    </div>
                    <div class="prix">23€</div>
                    <div class="menu_check"><i class="fa-solid fa-circle-check"></i></div>
@@ -141,9 +137,12 @@
 			<i class="fa-solid fa-handshake-angle"></i>
 			Devenir partenaire</p>
 		<p class="footerp">Mentions légales</p>
-		<p class="footerp">Contact</p>
+		<div> <a href="xxxx@gmail.com" >
+			<p class="footerp">Contact</p></a>
+		</div>
 
 	</footer>
+  </div>
     </section>
   </main>
   
