animation fini manque heart et lien vers sass

--- a/menu_A_la_française.html
+++ b/menu_A_la_française.html
@@ -141,7 +141,7 @@
 			<i class="fa-solid fa-handshake-angle"></i>
 			Devenir partenaire</p>
 		<p class="footerp">Mentions légales</p>
-		<div> <a href="xxxx@gmail.com" >
+		<div> <a href="mailto:contact@ohmyfood.fr" >
 			<p class="footerp">Contact</p></a>
 		</div>
 
