--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ohmyfood</title>
-	<link rel="stylesheet" href="ohmyfood.css">
+	<link rel="stylesheet"  href="ohmyfood.css">
+	
 	<script src="https://kit.fontawesome.com/595c8a578f.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/5886615ac6.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/ceb1dc6a3c.js" crossorigin="anonymous"></script>
@@ -121,7 +122,7 @@
 			<i class="fa-solid fa-handshake-angle"></i>
 			Devenir partenaire</p>
 		<p class="footerp">Mentions légales</p>
-		<div> <a href="xxxx@gmail.com" >
+		<div> <a href="mailto:contact@ohmyfood.fr" >
 			<p class="footerp">Contact</p></a>
 		</div>
 
