page et animation fini

--- a/menu_A_la_française.html
+++ b/menu_A_la_française.html
@@ -25,7 +25,9 @@
     <section>
       <div class="nomrestaurant">
         <div>
-          <h1>À la française <i class="fas fa-heart likeicon"></i></h1>
+          <h1>À la française <i class="fa-regular fa-heart likeicon"></i>
+            <i class="fa-solid fa-heart"></i>
+  </h1>
           <h4>Entrées</h4>
 
           <section class="menu">
