--- a/menu_La_note_enchantée.html
+++ b/menu_La_note_enchantée.html
@@ -24,8 +24,10 @@
     </div>
     <section>
       <div class="nomrestaurant">
-        <div>
-          <h1>La note enchantée<i class="fas fa-heart likeicon"></i></h1>
+        <div class="resto">
+          <h1>La note enchantée<i class="fa-regular fa-heart likeicon"></i>
+            <i class="fa-solid fa-heart"></i>
+  </h1>
           <h4>Entrées</h4>
 
           <section class="menu">
