--- a/menu_la_palette_du_gout.html
+++ b/menu_la_palette_du_gout.html
@@ -27,7 +27,9 @@
     <section>
       <div class="nomrestaurant">
         <div>
-          <h1>La palette du goût <i class="fas fa-heart likeicon"></i></h1>
+          <h1>La palette du goût <i class="fa-regular fa-heart likeicon"></i>
+            <i class="fa-solid fa-heart"></i>
+  </i></h1>
           <h4>Entrées</h4>
 
           <section class="menu">
