--- a/Menu_Le_délice_des_sens.html
+++ b/Menu_Le_délice_des_sens.html
@@ -27,7 +27,9 @@
     <section>
       <div class="nomrestaurant">
         <div>
-          <h1>Le délice des sens <i class="fas fa-heart likeicon"></i></h1>
+          <h1>Le délice des sens<i class="fa-regular fa-heart likeicon"></i>
+            <i class="fa-solid fa-heart"></i>
+  </h1>
           <h4>Entrées</h4>
 
           <section class="menu">
